--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: themeix@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Arnica Responsive Static Jekyll Theme For Blogging.
 baseurl: "/test-arnica" # the subpath of your site, e.g. /blog
-url: "https://jekyll-arnica.netlify.com/" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://akashmdiu.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 
 
 # Site Settings
